- created utility classes for margin bottom - replaced magic string content with constants from translations file - fixed spacing for top section on mobile

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -11,7 +11,10 @@ $space-base: 4px;
 $space-1: $space-base * 1;
 $space-2: $space-base * 2;
 $space-3: $space-base * 4;
-$space-4: $space-base * 8;
+$space-4: $space-base * 6;
+$space-5: $space-base * 8;
+$space-6: $space-base * 12;
+$space-lg: 100px;
 
 $selectLabelPadding: $space-2;
 $selectHighlight: $light-gray;
